Added amperage to the projects list and made a page for the project. A lot of the text is from the original website with some minor tweaks.

--- a/old/portfolio/amperage/amperage.html
+++ b/old/portfolio/amperage/amperage.html
@@ -31,7 +31,7 @@
         about Amperage and the Zero Engine from the links below.</p>
       <ul>
         <li><a href="https://games.digipen.edu/games/amperage#.WZeCvVGGPcs">Amperage on DigiPen's Game Gallery</a></li>
-        <li><a href="amperage_setup.exe" download>Download Amperage Installer</a></li>
+        <li><a href="../../../projects/amperage/amperage_setup.exe" download>Download Amperage Installer</a></li>
         <li><a href="https://zero.digipen.edu/">Zero Engine</a></li>
       </ul>
       <iframe class="youtube_video" src="https://youtube.com/embed/94QWQpbxsO8" allowfullscreen></iframe>
@@ -80,7 +80,7 @@
       I wrote up the simple GDD that turned into Amperage. I actually
       still have a copy of the assignment. If you're interested, you can find the original
       pencil and paper GDD for Amperage below.</p>
-      <p><a href="amperage_original_gdd.pdf" download>amperage_original_gdd.pdf</a></p>
+      <p><a href="../../../projects/amperage/amperage_original_gdd.pdf" download>amperage_original_gdd.pdf</a></p>
       <h1 class="content_header">Creating Circuit Boards</h1>
       <p>While creating this game, I worked as both a designer and a programmer.
       When students come into DigiPen, they are not expected to have any experience
@@ -99,7 +99,7 @@
       problems I noticed while drawing. Once I had the idea layed out on paper, the
       next step was to put it into the engine and playtest it. I also have some copies
       of these paper prototypes still. If you're interested you can find them below.</p>
-      <p><a href="amperage_paper_prototypes.pdf" download>amperage_paper_prototypes.pdf</a></p>
+      <p><a href="../../../projects/amperage/amperage_paper_prototypes.pdf" download>amperage_paper_prototypes.pdf</a></p>
       <h1 class="content_header">Looking Back</h1>
       <p>Whilst this project wasn't too for a first DigiPen game, there are definitely
       parts that could have been done differently to make the project go more smoothly than
