--- a/projects/index.html
+++ b/projects/index.html
@@ -43,6 +43,9 @@
 <hr>
 <h3><a href="varkor/index.html">Varkor</a></h3>
 <p>A custom game engine I plan to use for my future projects and I hope to use for more than just games. This is what I am currently working on.</p>
+<hr>
+<h3><a href="amperage/index.html">Amperage</a></h3>
+<p>A top-down, 2D game where a player takes the role of an imaginary charge of electricity to travel through puzzling circuits that make them use more than just their mind to get by.</p>
 <hr></div></div>
     </div>
     <div class="right_accent_grid">
