Updated some of the details about the roles in the amperage project page.

--- a/projects/amperage/index.html
+++ b/projects/amperage/index.html
@@ -54,8 +54,8 @@
 </ul>
 <h2>Team Members</h2>
 <ul>
-<li><em>Me</em> - Lead Designer, Programmer</li>
-<li><em>Dylan Sunkel</em> - Lead Artist, Designer</li>
+<li><em>Connor Deakin (Me)</em> - Lead Designer, Programmer</li>
+<li><em>Dylan Sunkel</em> - Artist, Designer</li>
 <li><em>Chase Rayment</em> - Lead Sound Designer, Lead Programmer</li>
 <li><em>John Henke</em> - Sound Designer</li>
 </ul>
