Added the notes section.
This section will act as a public dump.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="header">
         <div class="arrow_container">
           <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 26.5 26.5">
-            <path fill="#fff" paint-order="stroke markers fill" d="M13.2 0A13.2 13.2 0 000 13.2a13.2 13.2 0 0013.2 13.3 13.2 13.2 0 0013.3-13.3A13.2 13.2 0 0013.2 0zm-2.6 5.3h5.3v9.3h5.3l-8 7.9-8-8h5.4z"/>
+            <path fill="#fff" paint-order="stroke markers fill" d="M13.2 0A13.2 13.2 0 000 13.2a13.2 13.2 0 0013.2 13.3 13.2 13.2 0 0013.3-13.3A13.2 13.2 0 0013.2 0zm-2.6 5.3h5.3v9.3h5.3l-8 7.9-8-8h5.4z"></path>
           </svg>
         </div>
         <div class="header_text">Underdisc</div>
@@ -23,11 +23,12 @@
         <a class="sidebar_element index_link" href="index.html">Home</a>
         <a class="sidebar_element blog_link" href="blog/index.html">Blog</a>
         <a class="sidebar_element projects_link" href="projects/index.html">Projects</a>
+        <a class="sidebar_element notes_link" href="notes/index.html">Notes</a>
       </div>
     </div>
     <div class="content_container"><hr>
 <div style="text-align: center;">
-You&apos;ve found my corner of the internet. Thanks for stopping by. I&apos;m a programmer by trade and an amalgamation of some other things by nature. This is where I sometimes share what I do.
+You've found my corner of the internet. Thanks for stopping by. I'm a programmer by trade and an amalgamation of some other things by nature. This is where I sometimes share what I do.
 </div>
 <hr>
 <p><br></p>
