--- a/notes/index.html
+++ b/notes/index.html
@@ -26,15 +26,14 @@
         <a class="sidebar_element notes_link" href="../notes/index.html">Notes</a>
       </div>
     </div>
-    <div class="content_container"><h1>Projects</h1>
-<p>Below is a list of a large majority of the projects I have worked on. Each project has a small description below it and the link can be followed to find out more about the project and my contributions to it.</p>
+    <div class="content_container"><h1>Notes</h1>
+<div style="text-align: center;">
+Typing notes while working on anything is really helpful for clear thinking. I posts these notes here as a way to add content to my website. They are separate from the blog because much less effort is needed to write notes than a blog post.
+</div>
 <hr>
-<h3><a href="varkor/index.html">Varkor</a></h3>
-<p>A custom game engine I plan to use for my future projects and I hope to use for more than just games. This is what I am currently working on.</p>
-<hr>
-<h3><a href="amperage/index.html">Amperage</a></h3>
-<p>A top-down, 2D game where a player takes the role of an imaginary charge of electricity to travel through puzzling circuits that make them use more than just their mind to get by.</p>
-<hr></div>
+<p>23-09-16 - <a href="23-09-16_only_update_relevant_things_once.html">only update relevant things once</a><br>
+23-09-19 - <a href="23-09-19_dont_rebind_equivalent_materials.html">dont rebind equivalent materials</a><br>
+23-09-27 - <a href="23-09-27_implementing_quicksort.html">implementing quicksort</a></p></div>
   </div>
 
 
