--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a class="sidebar_element index_link" href="index.html">Home</a>
         <a class="sidebar_element blog_link" href="blog/index.html">Blog</a>
         <a class="sidebar_element projects_link" href="projects/index.html">Projects</a>
+        <a class="sidebar_element candy_link" href="candy/index.html">Candy</a>
         <a class="sidebar_element notes_link" href="notes/index.html">Notes</a>
       </div>
     </div>
