--- a/notes/index.html
+++ b/notes/index.html
@@ -32,9 +32,10 @@
 Typing notes while working on anything is really helpful for clear thinking. I posts these notes here as a way to add content to my website. They are separate from the blog because much less effort is needed to write notes than a blog post.
 </div>
 <hr>
-<p>23-09-16 - <a href="23-09-16_only_update_relevant_things_once.html">only update relevant things once</a><br>
+<p>23-09-29 - <a href="23-09-29_stop_optimizing_that_which_does_not_need.html">stop optimizing that which does not need</a><br>
+23-09-27 - <a href="23-09-27_implementing_quicksort.html">implementing quicksort</a><br>
 23-09-19 - <a href="23-09-19_dont_rebind_equivalent_materials.html">dont rebind equivalent materials</a><br>
-23-09-27 - <a href="23-09-27_implementing_quicksort.html">implementing quicksort</a></p></div>
+23-09-16 - <a href="23-09-16_only_update_relevant_things_once.html">only update relevant things once</a></p></div>
   </div>
 
 
